--- a/index.html
+++ b/index.html
@@ -39,15 +39,6 @@
   </p>
 
   <!-- Annuncio Anonymous Ads -->
-  <div id="frame" style="width: 100%;">
-    <iframe data-aa='2390798' src='//acceptable.a-ads.com/2390798'
-            style='border:0px; padding:0; width:100%; height:100px; overflow:hidden; background-color: transparent;'></iframe>
-    <a style="display: block; text-align: right; font-size: 12px"
-       id="frame-link"
-       href="https://aads.com/campaigns/new/?source_id=2390798&source_type=ad_unit&partner=2390798">
-      Advertise here
-    </a>
-  </div>
-
+<div id="frame" style="width:100%; height:100%;"><iframe data-aa='2390844' src='//acceptable.a-ads.com/2390844' style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe><a style="display: block; text-align: right; font-size: 12px;" id="preview-link" href="https://aads.com/campaigns/new/?source_id=2390844&source_type=ad_unit&partner=2390844">Advertise here</a></div>
 </body>
 </html>
