--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     È un atto di creazione, un gesto d'anima, una forma pura di connessione.
   </p>
 
-  <!-- Annuncio Anonymous Ads -->
-<div id="frame" style="width:100%; height:100%;"><iframe data-aa='2390849' src='//acceptable.a-ads.com/2390849' style='border:0px; padding:0; width:100%; height:100%; overflow:hidden; background-color: transparent;'></iframe><a style="display: block; text-align: right; font-size: 12px;" id="preview-link" href="https://aads.com/campaigns/new/?source_id=2390849&source_type=ad_unit&partner=2390849">Advertise here</a></div>
+ <meta name='admaven-placement' content=BqdC6qHY6>
 </body>
 </html>
